# livekit-langraph-starterkit

./: .gitignore  Makefile  README.md
backend/: README.md  langgraph.json  main.py  pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  agents.py  rooms.py  tokens.py
backend/app/core/: config.py  utils.py
backend/app/llm/: __init__.py  agent.py  pipeline.py  prompt.py
backend/app/schemas/: agent.py
backend/app/services/: __init__.py
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: [root-of-the-server]__48b32c58._.js.map  node_modules_next_229848ed._.js.map
frontend/.next/static/chunks/: [root-of-the-server]__8df7605f._.js  [root-of-the-server]__8df7605f._.js.map  [root-of-the-server]__8ebb6d4b._.css  [root-of-the-server]__8ebb6d4b._.css.map  [root-of-the-server]__e2c08166._.js  [root-of-the-server]__e2c08166._.js.map  node_modules_11a427da._.js  node_modules_11a427da._.js.map  node_modules_3f5052d8._.js  node_modules_3f5052d8._.js.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_a51498a5._.js.map  node_modules_bb1f8008._.js  node_modules_bb1f8008._.js.map  node_modules_livekit-client_dist_livekit-client_esm_mjs_a654c6e5._.js  (+13 more)
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: VoiceAgentClean.tsx
(+31 files in other folders)
